tests/cases/compiler/classAndInterface1.ts
class cli { }
interface cli { } // error